tests/machine/x/kotlin/query_sum_select.error
line 20:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/query_sum_select.kt:20:27: error: type mismatch: inferred type is Int but List<Any?> was expected
            __res.add(sum(n))
                          ^

 19:         if (n > 1) {
 20:             __res.add(sum(n))
 21:         }
